force-app/main/default/objects/Resultado_de_secci_n__c/Resultado_de_secci_n__c.object-meta.xml
<CustomObject>
    <label>Resultado de sección</label>
    <nameField>
        <displayFormat>Sec-{000}</displayFormat>
        <label>Nombre de Sección</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resultados de secciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>