force-app/main/default/objects/Resultado_de_secci_n__c/fields/Certificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Certificaci_n__c</fullName>
    <label>Certificación</label>
    <referenceTo>Intento_de_certificacion__c</referenceTo>
    <relationshipLabel>Resultados de secciones</relationshipLabel>
    <relationshipName>Resultados_de_secciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>