force-app/main/default/objects/Resultado_de_secci_n__c/fields/nombre_de_seccion__c.field-meta.xml
<CustomField>
    <fullName>nombre_de_seccion__c</fullName>
    <formula>Secciones_de_certificaci_n__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>nombre de seccion</label>
    <type>Text</type>
</CustomField>