force-app/main/default/objects/Resultado_de_secci_n__c/fields/Secciones_de_certificaci_n__c.field-meta.xml
<CustomField>
    <fullName>Secciones_de_certificaci_n__c</fullName>
    <label>Secciones de certificación</label>
    <referenceTo>secciones_de_certificacion__c</referenceTo>
    <relationshipLabel>Resultados de secciones</relationshipLabel>
    <relationshipName>Resultados_de_secciones</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>