force-app/main/default/objects/Resultado_de_secci_n__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>nombre_de_seccion__c</columns>
    <columns>Certificaci_n__c</columns>
    <columns>Secciones_de_certificaci_n__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>